--- a/login.html
+++ b/login.html
@@ -22,21 +22,25 @@
 
         <!-- link that takes you to account creation -->
         <div>
-            <a href="">Create an account</a>
+            <a href="#" style="text-decoration: none;">Create an account</a>
         </div>
         <div>
             <p>or</p>
             <p>Please log in</p>
         </div>
-        <div class="credentials">
-            <input type="text" id="email" name="email" placeholder="Email">
-            <input type="text" id="password" name="password" placeholder="Password">
-        </div>
-        <div class="login-button">
-            <button>Log in</button>
-        </div>
+        <!-- takes you to index to html when login button pressed -->
+        <form action="/index.html" method="POST">
+            <div class="credentials">
+                <input type="text" id="email" name="email" placeholder="Email" required>
+                <br>
+                <input type="text" id="password" name="password" placeholder="Password" required>
+            </div>
+            <div id="login-button">
+                <input type="submit" value="Login">
+            </div>
+        </form>
         <div>
-            <a href="">Forgot password</a>
+            <a href="#" style="text-decoration: none;">Forgot password</a>
         </div>
 
      </div>
