addPost html and css

--- a/addPost.html
+++ b/addPost.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>addPost</title>
+    <link rel="stylesheet" href="res/css/style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+        </ul>
+            <div class="profile-button"><button type="button" onclick="location.href = 'login.html'"><img src="res/images/Default_Profile.png" width="60px" height="60px" alt="Profile"></button></div>
+    </nav>
+
+    <section class="addPost-box">
+        <div class="addPost-postBody">
+            <p>Post body</p>
+            <textarea placeholder="textarea"></textarea>
+        </div>
+        <div class="addPost-selectFile">
+            <p>Select file</p>
+            <button>Choose file</button>
+        </div>
+        <button>Create post</button>
+    </section>
     
 </body>
 </html>
