--- a/addPost.html
+++ b/addPost.html
@@ -21,9 +21,9 @@
         </div>
         <div class="addPost-selectFile">
             <p>Select file</p>
-            <button>Choose file</button>
+            <button type="button" onclick="location.href = 'index.html'">Choose file</button>
         </div>
-        <button>Create post</button>
+        <button type="button" onclick="location.href = 'index.html'">Create post</button>
     </section>
     
 </body>
