Paar väikest muudatust

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </section>
 
     <footer>
-        <p>Idk mis siin teha lih jääbki nii??</p>
+        <p>footer</p>
     </footer>
 </body>
 </html>
