muutsin navbari nii et see oleks ühtne kõikjal

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>                
         </ul>
-        <img src="res/images/Default_Profile.png" width="60px" height="60px" alt="Profile">
+        <div class="profile-button"><button type="button" onclick="location.href = 'login.html'"><img src="res/images/Default_Profile.png" width="60px" height="60px" alt="Profile"></button></div>
     </nav>    
 
     <!-- actual login box -->
