--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="addPost.html">Add Post</a></li>
             </ul>
-            <img src="res/images/Default_Profile.png" width="60" height="60" alt="Profile">
+            <div class="profile-button"><button type="button" onclick="location.href = 'login.html'"><img src="res/images/Default_Profile.png" width="60px" height="60px" alt="Profile"></button></div>
         </nav>
     </header>
 
