--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
             <p>Please log in</p>
         </div>
         <!-- takes you to index to html when login button pressed -->
-        <form action="/index.html" method="POST">
+        <form action="index.html" method="GET">
             <div class="credentials">
                 <input type="text" id="email" name="email" placeholder="Email" required>
                 <br>
